# completely-fair-scheduler

./: CMakeLists.txt  README.md
notes/: architecture.md  concepts.md
src/: core.cpp  core.hpp  main.cpp
tests/: job_test.cpp
